# solace-ai-connector-slack

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  solace-agent-mesh.yaml  trace_None_1351621253156442112.txt  trace_None_314566854376947725.txt  trace_None_384123354807926786.txt
.github/workflows/: ci.yaml  release.yaml
configs/gateways/discord/: discord.yaml  gateway.yaml
configs/gateways/rest_api/: gateway.yaml  rest-api.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  secret.yaml
modules/gateways/: discord
src/bot/: bot.py
src/solace_ai_connector_discord/components/: discord_base.py  discord_input.py  discord_output.py  slack_base.py
src/solace_ai_connector_slack/components/: rjsf_to_slack_blocks.py  slack_base.py  slack_channels_and_users.py  slack_input.py  slack_output.py
tests/: test_form_submission.py  test_rjsf_to_slack_blocks.py
